# uvplayer

./: CMakeLists.txt
cmake/: uvconfigmacros.cmake  uvsetup.cmake
resource/: mediaplayer.qrc  mediaplayer.rcc  skin.qrc  skin.rcc  uvplayer.qrc  uvplayer.rcc
resource/skin/: mediaplayer.qss  uvplayer.qss
resource/translation/: build&merge_TsFile.bat  build_qmFile.bat  en_US.ts  zh_CN.qm  zh_CN.ts
src/: CMakeLists.txt  appdef.hpp  auvexport.hpp  avdef.hpp  main.cpp  uvbase.hpp  uvbuf.hpp  uvcenterwidget.cpp  uvcenterwidget.hpp  uvcenterwidget_p.hpp  uvconf.hpp  uvcustomeventtype.hpp  uvdef.hpp  uvdevice.hpp  uverr.hpp  uvffplayer.cpp  uvffplayer.hpp  uvfile.hpp  uvframe.cpp  uvframe.hpp  uvfunctions.hpp  uvgl.hpp  uvglwidget.cpp  uvglwidget.hpp  uvglwnd.cpp  uvglwnd.hpp  uvgui.hpp  uviniparser.cpp  uviniparser.hpp  uvmainwindow.cpp  uvmainwindow.hpp  uvmainwindow_p.hpp  uvmedia.hpp  uvmultiview.cpp  uvmultiview.hpp  uvmultiview_p.hpp  uvopenmediadlg.cpp  uvopenmediadlg.hpp  uvscope.hpp  uvtable.cpp  (+11 more)
src/codec/: uvffplayer.cpp  uvffplayer.hpp
src/conf/: uvconf.hpp  uvfile.hpp  uviniparser.cpp  uviniparser.hpp
src/def/: appdef.hpp  auvexport.hpp  avdef.hpp  uvdef.hpp
src/frame/: uvbuf.hpp  uvframe.cpp  uvframe.hpp
src/framelessMessageBox/: CMakeLists.txt  uvbasedialog.cc  uvbasedialog.hpp  uvbasedialog_p.hpp  uvfiledialog.cc  uvfiledialog.hpp  uvfiledialog_p.hpp  uvmessagebox.cc  uvmessagebox.hpp  uvmessagebox_p.hpp
src/gl/: uvgl.hpp  uvglwidget.cpp  uvglwidget.hpp  uvglwnd.cpp  uvglwnd.hpp
src/global/: uvbase.hpp  uvdevice.hpp  uvmedia.hpp  uvscope.hpp  uvsingletonwindow.h
src/interface/: uvcenterwidget.cpp  uvcenterwidget.hpp  uvmainwindow.cpp  uvmainwindow.hpp  uvmainwindow_p.hpp  uvmultiview.cpp  uvmultiview.hpp  uvmultiview_p.hpp  uvopenmediadlg.cpp  uvopenmediadlg.hpp  uvtable.cpp  uvvideoplayer.hpp  uvvideotitlebar.cpp  uvvideotitlebar.hpp  uvvideotoolbar.cpp  uvvideotoolbar.hpp  uvvideowidget.cpp  uvvideowidget.hpp  uvvideownd.cpp  uvvideownd.hpp  uvvideowndfactory.hpp
src/logger/: CMakeLists.txt  dualfilelogger.cc  dualfilelogger.cpp  dualfilelogger.hpp  dualfilelogger_p.hpp  filelogger.cc  filelogger.hpp  filelogger_p.hpp  logger.cc  logger.hpp  logger_p.hpp  logger_p_global.hpp  logmessage.cc  logmessage.cpp  logmessage.hpp  logmessage_p.hpp
src/sdl/: uvsdl2Wnd.cpp  uvsdl2Wnd.hpp
src/util/: uvbuf.hpp  uvffmpeg_util.hpp  uvframe.hpp  uvgui.hpp  uvsdl_util.hpp
src/uvmaterialslider/: uvmaterialslider.cc  uvmaterialslider.hpp  uvmaterialslider_internal.cc  uvmaterialslider_internal.hpp
src/uvslider/: CMakeLists.txt  uvslider.cpp  uvslider.h  uvsliderstyle.cpp  uvsliderstyle.h
src/uvstring/: CMakeLists.txt  uvstring.cpp  uvstring.hpp
src/video/: uvcodec.cpp  uvcodec.hpp  uvffplayer.cpp  uvffplayer.hpp  uvvideoplayer.hpp  uvvideotoolbar.cpp  uvvideowidget.cpp  uvvideowidget.hpp  uvvideownd.cpp  uvvideownd.hpp
